FreeImage/Wrapper/Delphi/FreeImage.pas

unit FreeImage;

interface

uses Windows;
// ==========================================================
// Delphi wrapper for FreeImage 3
//
// Design and implementation by
// - Simon Beavis
// - Peter Byström
//
// This file is part of FreeImage 3
//
// COVERED CODE IS PROVIDED UNDER THIS LICENSE ON AN "AS IS" BASIS, WITHOUT WARRANTY
// OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, WITHOUT LIMITATION, WARRANTIES
// THAT THE COVERED CODE IS FREE OF DEFECTS, MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE
// OR NON-INFRINGING. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE COVERED
// CODE IS WITH YOU. SHOULD ANY COVERED CODE PROVE DEFECTIVE IN ANY RESPECT, YOU (NOT
// THE INITIAL DEVELOPER OR ANY OTHER CONTRIBUTOR) ASSUME THE COST OF ANY NECESSARY
// SERVICING, REPAIR OR CORRECTION. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL
// PART OF THIS LICENSE. NO USE OF ANY COVERED CODE IS AUTHORIZED HEREUNDER EXCEPT UNDER
// THIS DISCLAIMER.
//
// Use at your own risk!
// ==========================================================

{$MINENUMSIZE 4}      // Make sure enums are stored as an integer to be compatible with C/C++

const
  FIDLL = 'FreeImage.dll';

// Indexes for byte arrays, masks and shifts for treating pixels as words ---
// These coincide with the order of RGBQUAD and RGBTRIPLE -------------------
// Little Endian (x86 / MS Windows, Linux) : BGR(A) order
const
  FI_RGBA_RED         = 2;
  FI_RGBA_GREEN       = 1;
  FI_RGBA_BLUE        = 0;
  FI_RGBA_ALPHA       = 3;
  FI_RGBA_RED_MASK    = $00FF0000;
  FI_RGBA_GREEN_MASK  = $0000FF00;
  FI_RGBA_BLUE_MASK   = $000000FF;
  FI_RGBA_ALPHA_MASK  = $FF000000;
  FI_RGBA_RED_SHIFT   = 16;
  FI_RGBA_GREEN_SHIFT = 8;
  FI_RGBA_BLUE_SHIFT  = 0;
  FI_RGBA_ALPHA_SHIFT = 24;

type
  FIBITMAP = record
    data : Pointer;
  end;
  PFIBITMAP = ^FIBITMAP;

  FIMULTIBITMAP = record
    data : Pointer;
  end;
  PFIMULTIBITMAP = ^FIMULTIBITMAP;

// ICC profile support ------------------------------------------------------
const
  FIICC_DEFAULT = $0;
  FIICC_COLOR_IS_CMYK	= $1;

type
  FIICCPROFILE = record
    flags : WORD;   // info flag
    size : DWORD;   // profile's size measured in bytes
    data : pointer; // points to a block of contiguous memory containing the profile
  end;
  PFIICCPROFILE = ^FIICCPROFILE;

// Important enums ----------------------------------------------------------
type
  // I/O image format identifiers.
  FREE_IMAGE_FORMAT = (
	FIF_UNKNOWN = -1,
	FIF_BMP		  = 0,
	FIF_ICO	  	= 1,
	FIF_JPEG   	= 2,
	FIF_JNG	  	= 3,
	FIF_KOALA 	= 4,
	FIF_LBM	  	= 5,
	FIF_IFF     = FIF_LBM,
	FIF_MNG	  	= 6,
	FIF_PBM	  	= 7,
	FIF_PBMRAW	= 8,
	FIF_PCD	  	= 9,
	FIF_PCX	  	= 10,
	FIF_PGM	  	= 11,
	FIF_PGMRAW	= 12,
	FIF_PNG	  	= 13,
	FIF_PPM	  	= 14,
	FIF_PPMRAW	= 15,
	FIF_RAS	  	= 16,
	FIF_TARGA 	= 17,
	FIF_TIFF  	= 18,
	FIF_WBMP  	= 19,
	FIF_PSD	  	= 20,
	FIF_CUT	  	= 21,
	FIF_XBM	  	= 22,
	FIF_XPM	  	= 23
  );

{
  Image type used in FreeImage.
}

  FREE_IMAGE_TYPE = (
    FIT_UNKNOWN = 0,	// unknown type
    FIT_BITMAP  = 1,	// standard image			: 1-, 4-, 8-, 16-, 24-, 32-bit
    FIT_UINT16	= 2,	// array of unsigned short	: unsigned 16-bit
    FIT_INT16	  = 3,	// array of short			: signed 16-bit
    FIT_UINT32	= 4,	// array of unsigned long	: unsigned 32-bit
    FIT_INT32  	= 5,	// array of long			: signed 32-bit
    FIT_FLOAT	  = 6,	// array of float			: 32-bit IEEE floating point
    FIT_DOUBLE	= 7,	// array of double			: 64-bit IEEE floating point
    FIT_COMPLEX	= 8		// array of FICOMPLEX		: 2 x 64-bit IEEE floating point
  );

  // Image color type used in FreeImage.
  FREE_IMAGE_COLOR_TYPE = (
	  FIC_MINISWHITE = 0,		// min value is white
    FIC_MINISBLACK = 1,		// min value is black
    FIC_RGB        = 2,		// RGB color model
    FIC_PALETTE    = 3,		// color map indexed
	  FIC_RGBALPHA   = 4,		// RGB color model with alpha channel
	  FIC_CMYK       = 5		// CMYK color model
  );

  // Color quantization algorithms. Constants used in FreeImage_ColorQuantize.
  FREE_IMAGE_QUANTIZE = (
    FIQ_WUQUANT = 0,		// Xiaolin Wu color quantization algorithm
    FIQ_NNQUANT = 1			// NeuQuant neural-net quantization algorithm by Anthony Dekker
  );

  // Dithering algorithms. Constants used FreeImage_Dither.
  FREE_IMAGE_DITHER = (
    FID_FS            = 0,	// Floyd & Steinberg error diffusion
    FID_BAYER4x4      = 1,	// Bayer ordered dispersed dot dithering (order 2 dithering matrix)
    FID_BAYER8x8      = 2,	// Bayer ordered dispersed dot dithering (order 3 dithering matrix)
    FID_CLUSTER6x6    = 3,	// Ordered clustered dot dithering (order 3 - 6x6 matrix)
    FID_CLUSTER8x8    = 4,	// Ordered clustered dot dithering (order 4 - 8x8 matrix)
    FID_CLUSTER16x16  = 5   // Ordered clustered dot dithering (order 8 - 16x16 matrix)
  );

  // Upsampling / downsampling filters. Constants used in FreeImage_Rescale.
  FREE_IMAGE_FILTER = (
    FILTER_BOX	      = 0,	// Box, pulse, Fourier window, 1st order (constant) b-spline
    FILTER_BICUBIC    = 1,	// Mitchell & Netravali's two-param cubic filter
    FILTER_BILINEAR   = 2,	// Bilinear filter
    FILTER_BSPLINE    = 3,	// 4th order (cubic) b-spline
    FILTER_CATMULLROM = 4,	// Catmull-Rom spline, Overhauser spline
    FILTER_LANCZOS3   = 5	// Lanczos3 filter
  );
  // Color channels. Constants used in color manipulation routines.
  FREE_IMAGE_COLOR_CHANNEL = (
    FICC_RGB	  = 0, // Use red, green and blue channels
    FICC_RED	  = 1, // Use red channel
    FICC_GREEN	= 2, // Use green channel
    FICC_BLUE	  = 3, // Use blue channel
    FICC_ALPHA	= 4, // Use alpha channel
    FICC_BLACK	= 5, // Use black channel
    FICC_REAL	  = 6, // Complex images: use real part
	  FICC_IMAG	  = 7, // Complex images: use imaginary part
	  FICC_MAG	  = 8, // Complex images: use magnitude
  	FICC_PHASE	= 9	 // Complex images: use phase
  );

// MetaData support ---------------------------------------------------------

{
  Tag data type information (based on TIFF specifications)

  Note: RATIONALs are the ratio of two 32-bit integer values.
}

type
  FREE_IMAGE_MDTYPE = (
    FIDT_NOTYPE		 = 0,	 // placeholder
    FIDT_BYTE		   = 1,	 // 8-bit unsigned integer
    FIDT_ASCII	   = 2,	 // 8-bit bytes w/ last byte null
    FIDT_SHORT	   = 3,	 // 16-bit unsigned integer
    FIDT_LONG		   = 4,	 // 32-bit unsigned integer
    FIDT_RATIONAL  = 5,	 // 64-bit unsigned fraction
    FIDT_SBYTE		 = 6,	 // 8-bit signed integer
    FIDT_UNDEFINED = 7,	 // 8-bit untyped data
    FIDT_SSHORT	   = 8,	 // 16-bit signed integer
    FIDT_SLONG	   = 9,	 // 32-bit signed integer
    FIDT_SRATIONAL = 10, // 64-bit signed fraction
    FIDT_FLOAT	   = 11, // 32-bit IEEE floating point
    FIDT_DOUBLE	   = 12, // 64-bit IEEE floating point
    FIDT_IFD	     = 13	 // 32-bit unsigned integer (offset)
  );

{
  Metadata models supported by FreeImage
}
  FREE_IMAGE_MDMODEL = (
    FIMD_NODATA		    	= -1,
    FIMD_COMMENTS		    = 0,	// single comment or keywords
    FIMD_EXIF_MAIN		  = 1,	// Exif-TIFF metadata
    FIMD_EXIF_EXIF	  	= 2,	// Exif-specific metadata
    FIMD_EXIF_GPS		    = 3,	// Exif GPS metadata
    FIMD_EXIF_MAKERNOTE = 4,	// Exif maker note metadata
    FIMD_EXIF_INTEROP	  = 5,	// Exif interoperability metadata
    FIMD_IPTC		      	= 6,	// IPTC/NAA metadata
    FIMD_XMP		      	= 7,	// Abobe XMP metadata
    FIMD_GEOTIFF	    	= 8,	// GeoTIFF metadata (to be implemented)
    FIMD_CUSTOM		    	= 9		// Used to attach other metadata types to a dib
  );

{
  Handle to a metadata model
}

  FIMETADATA = record
    data: Pointer;
  end;
  PFIMETADATA = ^FIMETADATA;

{
  Metadata attribute
}

  FITAG = record
    key: PChar;			    // tag field name
    description: PChar; // tag description
    id: WORD;			      // tag ID
    mdtype: WORD;			  // tag data type (see FREE_IMAGE_MDTYPE)
    count: DWORD;		    // number of components (in 'tag data types' units)
    length: DWORD;	    // value length in bytes
    value: Pointer;		  // tag value
  end;
  PFITAG = ^FITAG;


// File IO routines ---------------------------------------------------------
type
  fi_handle = pointer;
  PCardinal = ^Cardinal;
  PInt = ^integer;

  FI_ReadProc = function(buffer : pointer; size : Cardinal; count : Cardinal; handle : fi_handle) : PCardinal; stdcall;
  FI_WriteProc = function(buffer : pointer; size, count : Cardinal; handle : fi_handle) : PCardinal; stdcall;
  FI_SeekProc = function(handle : fi_handle; offset : longint; origin : integer) : pint; stdcall;
  FI_TellProc = function(handle : fi_handle) : PCardinal; stdcall;

  FreeImageIO = packed record
    read_proc : FI_ReadProc;     // pointer to the function used to read data
    write_proc: FI_WriteProc;    // pointer to the function used to write data
    seek_proc : FI_SeekProc;     // pointer to the function used to seek
    tell_proc : FI_TellProc;     // pointer to the function used to aquire the current position
  end;

  PFreeImageIO = ^FreeImageIO;

{
  Handle to a memory I/O stream
}
  FIMEMORY = record
    data: Pointer;
  end;
  PFIMEMORY = ^FIMEMORY;

const
  SEEK_SET = 0;
  SEEK_CUR = 1;
  SEEK_END = 2;

// Plugin routines ----------------------------------------------------------
type
  PPluginStruct = ^PluginStruct;

  FI_InitProc = procedure(plugin : PPluginStruct; format_id : integer); stdcall;
  FI_FormatProc = function : PChar; stdcall;
  FI_DescriptionProc = function : PChar; stdcall;
  FI_ExtensionListProc = function : PChar; stdcall;
  FI_RegExprProc = function : PChar; stdcall;
  FI_OpenProc = function(io : PFreeImageIO; handle : fi_handle; read : boolean) : pointer; stdcall;
  FI_CloseProc = procedure(io : PFreeImageIO; handle : fi_handle; data : pointer); stdcall;
  FI_PageCountProc = function(io : PFreeImageIO; handle : fi_handle; data : pointer) : integer; stdcall;
  FI_PageCapabilityProc = function(io : PFreeImageIO; handle : fi_handle; data : pointer) : integer; stdcall;
  FI_LoadProc = function(io : PFreeImageIO; handle : fi_handle; page, flags : integer; data : pointer) : PFIBITMAP; stdcall;
  FI_SaveProc = function(io : PFreeImageIO; dib : PFIBITMAP; handle : fi_handle; page, flags : integer; data : pointer) : boolean; stdcall;
  FI_ValidateProc = function(io : PFreeImageIO; handle : fi_handle) : boolean; stdcall;
  FI_MimeProc = function : PChar; stdcall;
  FI_SupportsExportBPPProc = function(bpp : integer) : boolean; stdcall;
  FI_SupportsICCProfilesProc = function : boolean; stdcall;

  PluginStruct = record
    format_proc : FI_FormatProc;
    description_proc : FI_DescriptionProc;
    extension_proc : FI_ExtensionListProc;
    regexpr_proc : FI_RegExprProc;
    open_proc : FI_OpenProc;
    close_proc : FI_CloseProc;
    pagecount_proc : FI_PageCountProc;
    pagecapability_proc : FI_PageCapabilityProc;
    load_proc : FI_LoadProc;
    save_proc : FI_SaveProc;
    validate_proc : FI_ValidateProc;
    mime_proc : FI_MimeProc;
    supports_export_bpp_proc : FI_SupportsExportBPPProc;
    supports_icc_profiles_proc : FI_SupportsICCProfilesProc;
  end;
